--- a/Formulario.html
+++ b/Formulario.html
@@ -1,5 +1,5 @@
   
-  
+
   <!DOCTYPE html>
   <html lang="es">
   <head>
@@ -74,11 +74,13 @@
       <table id="estados-table"> </table>
       </div>
 
-      <p class="centrado">
+      <!-- <p class="centrado">
       <button type="submit"  id="btnMostrar">MOSTRAR</button>
-      </p>
+      </p> -->
 
       <button type="button" id="ejemplo">ejemplo</button>
+
+      <label id = "error">Aqui se mostrara el error</label>
 
       </form>
 
