--- a/Formulario2.html
+++ b/Formulario2.html
@@ -41,14 +41,12 @@
         </div>
   
         <p class="centrado">
-        <input type="submit" value="Crear Paquete" id="btnMostrar" />
+            <button type="button" id="btnMostrar">Mostrar</button>
         </p>
-  
         </form>
-
 
     <script src = "assets/datatables/jQuery-3.6.0/jquery-3.6.0.min.js"> </script>
     <script src = "assets/scripts/conexion.js"> </script>
-    <script src = "assets/scripts/Estados.js"> </script>
+    <script src = "assets/scripts/mostrarContenido.js"> </script>
 </body>
 </html>
