--- a/Pruebas/Formulario.html
+++ b/Pruebas/Formulario.html
@@ -88,7 +88,7 @@
     <script src = "assets/datatables/datatables.min.js"> </script>
     <script src = "assets/scripts/conexion.js"> </script>
     <script src = "assets/scripts/Estados.js"> </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   
   </body>
   </html>
