--- a/Pruebas/Formulario2.html
+++ b/Pruebas/Formulario2.html
@@ -45,5 +45,6 @@
     <script src = "assets/datatables/jQuery-3.6.0/jquery-3.6.0.min.js"> </script>
     <script src = "assets/scripts/conexion.js"> </script>
     <script src = "assets/scripts/mostrarContenido.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
