--- a/Pruebas/Formulario2.html
+++ b/Pruebas/Formulario2.html
@@ -40,11 +40,17 @@
         <p class="centrado">
             <button type="button" id="btnMostrar">Mostrar</button>
         </p>
+
+        <p class="centrado">
+            <button type="button" id="btnEliminar">Eliminar</button>
+        </p>
+        
         </form>
 
     <script src = "assets/datatables/jQuery-3.6.0/jquery-3.6.0.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src = "assets/scripts/conexion.js"> </script>
     <script src = "assets/scripts/mostrarContenido.js"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+   
 </body>
 </html>
