--- a/Pruebas/Formulario.html
+++ b/Pruebas/Formulario.html
@@ -70,25 +70,25 @@
       <legend>DATOS DEL PAQUETE</legend>
       <p>
 
+      <label for="idPaquete">Código de Rastreo</label>
+      <input type="text" name="codRastreo" id="codRastreo" />
+
       <div style="text-align:center;">
       <table id="estados-table"> </table>
       </div>
 
-      <!-- <p class="centrado">
-      <button type="submit"  id="btnMostrar">MOSTRAR</button>
-      </p> -->
-
-      <button type="button" id="ejemplo">ejemplo</button>
-
-      <label id = "error">Aqui se mostrara el error</label>
+      <p class="centrado">
+        <button type="button" id="btnEstados">Seguir Envío</button>
+    </p>
 
       </form>
 
     <script src = "assets/datatables/jQuery-3.6.0/jquery-3.6.0.min.js"> </script>
     <script src = "assets/datatables/datatables.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src = "assets/scripts/conexion.js"> </script>
     <script src = "assets/scripts/Estados.js"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
   
   </body>
   </html>
