--- a/Pruebas/Formulario2.html
+++ b/Pruebas/Formulario2.html
@@ -38,12 +38,17 @@
         </div>
   
         <p class="centrado">
-            <button type="button" id="btnMostrar">Mostrar</button>
+            <button type="button" id="btnMostrar">Guardar</button>
         </p>
 
         <p class="centrado">
             <button type="button" id="btnEliminar">Eliminar</button>
         </p>
+
+        <p class="centrado">
+            <button type="button" id="btnModificar">Modificar</button>
+        </p>
+
         
         </form>
 
